[package]
name = "rust-temperature-converter"
version = "0.1.0"
authors = ["Jeff Mitchell", "<sentinel1909@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = [ "derive" ] }